fix(sbb-navigation): set correct dimension on mobile (#1646)

--- a/src/components/sbb-navigation/sbb-navigation.scss
+++ b/src/components/sbb-navigation/sbb-navigation.scss
@@ -24,12 +24,19 @@
   --sbb-navigation-backdrop-color: transparent;
   --sbb-navigation-list-margin-block-start: var(--sbb-spacing-responsive-xxl);
   --sbb-navigation-inline-start: 0;
-  --sbb-navigation-height: 100vh;
-  --sbb-navigation-width: 100%;
   --sbb-navigation-expanded-width: 100%;
   --sbb-navigation-inset: 0 auto auto 0;
   --sbb-navgation-transform: translateX(-100%);
   --sbb-navigation-content-transform: translateX(0);
+  --sbb-navigation-width: 100%;
+  --sbb-navigation-height: 100vh;
+
+  // Needed for backwards compatibility on Chromatic
+  // TODO: Remove once not needed
+  @supports (height: 100dvh) {
+    --sbb-navigation-height: 100dvh;
+  }
+
   --sbb-focus-outline-color: var(--sbb-focus-outline-color-dark);
 
   // We use this rule to make the inner container element to appear as if it were a
@@ -78,6 +85,12 @@
   @include sbb.mq($from: 'large') {
     --sbb-navigation-expanded-width: 100vw;
     --sbb-navigation-content-transform: translateX(0%);
+
+    // Needed for backwards compatibility on Chromatic
+    // TODO: Remove once not needed
+    @supports (height: 100dvw) {
+      --sbb-navigation-expanded-width: 100dvw;
+    }
   }
 }
 
